<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorAzur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp"
            android:background="@color/colorPrimaryDark1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20sp"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conten_text"
                android:textSize="15sp"
                android:textColor="#fff"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_layout">

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Selengkapnya"
                    android:layout_marginRight="20dp"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle1"/>

                <Button
                    android:id="@+id/btnregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Join Now"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle2"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="374dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/user"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="Login"
                android:textColor="#fff"
                android:layout_marginBottom="@dimen/activity_vertical_layout"
                android:drawableRight="@drawable/ic_send_white_24dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle2"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>