<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzur"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/daftar"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittextstyle"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittextstyle"/>

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittextstyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_layout"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/daftar"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/buttonstyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="221dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Sign Up with Social Media"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_layout"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/fb" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/in" />

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/activity_vertical_layout"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/tw" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>